--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "@google/genai": "^1.12.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "json5": "^2.2.3",
+    "marked": "^16.1.2"
   }
 }
