--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "highlightjs-copy": "^1.0.6",
     "json5": "^2.2.3",
     "marked": "^16.1.2"
   }
