--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
+    "highlight.js": "^11.11.1",
+    "highlightjs-copy": "^1.0.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
