--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "highlightjs-copy": "^1.0.6",
     "json5": "^2.2.3",
-    "marked": "^16.1.2"
+    "marked": "^16.1.2",
+    "mongoose": "^8.17.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
