--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "highlightjs-copy": "^1.0.6",
+    "html-to-text": "^9.0.5",
     "json5": "^2.2.3",
     "marked": "^16.1.2",
     "mongoose": "^8.17.1",
