--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vite-plugin-pwa": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
